--- a/src/components/caroucels/mobile-caroucel.css
+++ b/src/components/caroucels/mobile-caroucel.css
@@ -1,8 +1,7 @@
 .embla {
-    overflow: hidden;
-    height: 60vh;
-    margin: 0 5%;
-    margin-top: 2%;
+    overflow: visible;
+    height: 60svh;
+    margin: 0;
     margin-bottom: 1.7%;
 }
 
@@ -34,4 +33,8 @@
 .inPic-btn:hover {
     background-color: #0059a2 !important;
     cursor: pointer;
+}
+
+.info-card {
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
 }
